1st mongo connection

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
       <h1>1960s Avant-Garde Jazz Albums</h1>
     <ul>
      <% albums.forEach((album) => { %>
-      <li><a href="/albums/<%= album.id %>"> <%= album.title %> </a></li>
+      <li><a href="/albums/<%= album.title %>"> <%= album.title %> </a></li>
      <% }); %>
     </ul>
   </body>
