--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -4,12 +4,12 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
   <body>
-    <h1>Details about <em><%= album.title %></em><i>:</i></h1>
+    <h1>Details about <em><%= result.title %></em><i>:</i></h1>
 
     <ul>
-      <li><strong>Artist:</strong> <%= album.artist %></li>
-      <li><strong>Year recorded:</strong> <%= album.year %></li>
-      <li><strong>Label:</strong> <%= album.label %></li>
+      <li><strong>Artist:</strong> <%= result.artist %></li>
+      <li><strong>Year recorded:</strong> <%= result.year %></li>
+      <li><strong>Label:</strong> <%= result.label %></li>
     </ul>
     <p><a href="/">Back home</a></p>
 
