--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -2,16 +2,34 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="../styles.css">
-</head>
-  <body>
-    <h1>Details about <em><%= result.title %></em><i>:</i></h1>
+  <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 
-    <ul>
-      <li><strong>Artist:</strong> <%= result.artist %></li>
-      <li><strong>Year recorded:</strong> <%= result.year %></li>
-      <li><strong>Label:</strong> <%= result.label %></li>
-    </ul>
-    <p><a href="/">Back home</a></p>
+  <!-- Don't use this in production: -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+</head>
+  
+  <body>
+
+    <div id="root"></div> 
+
+      <script type="text/babel">
+        let birdy = <%- result %>;
+          ReactDOM.render(
+            <div>
+              <h1>Details about <em>{birdy.title}</em><i>:</i></h1>
+              <ul>
+                <li><strong>Artist:</strong> {birdy.artist}</li>
+                <li><strong>Year recorded:</strong> {birdy.year}</li>
+                <li><strong>Label:</strong> {birdy.label}</li>
+              </ul>
+            </div>,
+            document.getElementById('root')
+          );
+
+    </script>
+
+    <p><a href="/api/albums">Back home</a></p>
 
   </body>
 </html>
